Move comments and spaces from javassist 1:1 to make another migrations easier + small fix in Callback.java and Reflection.java